Add drift detection scripts and update dependencies
Introduces several new scripts for drift detection, model serving, and MLflow management. Updates the Makefile with new targets for training, serving, drift checks, and deployment automation. Upgrades Prefect and MLflow versions, adds pydantic and griffe to dependencies, and updates related code in main.py, stage.py, and utils modules to support new workflows.

--- a/Pipfile
+++ b/Pipfile
@@ -21,11 +21,13 @@ pyarrow = "*"
 plotly = "*"
 category-encoders = "==2.5.0"
 haversine = "==2.6.0"
-prefect = "==2.0b15"
+prefect = "==2.14.5"
 boto3 = "*"
-mlflow = "*"
+mlflow = "==2.6.0"
+pydantic = "<2"
 python-dotenv = "==0.20.0"
 gunicorn = "*"
+griffe = ">=0.21,<1"
 
 [requires]
 python_version = "3.9"
